guestbook/app/guestbook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: guestbook
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-server
  selector:
    app: guestbook
  sessionAffinity: None
  # type: NodePort
