guestbook/app/guestbook-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - guestbook.local
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
    # - hosts:
    #     - guestbook.local
    #   port:
    #     name: https
    #     number: 443
    #     protocol: HTTPS
    #   tls:
    #     credentialName: default-rsa-cert-2048
    #     mode: SIMPLE
